tests/NormalTests/paczka1/small_fuzzy/26467513.err
Error in line 4: KzsJy A120 12,7
Error in line 2: NIB S507 33,5
Error in line 15: KzsJy S69 16,6
